# context_manager

./: Cargo.toml  README.md  build.rs
src/: app.rs  constants.rs  document_generator.rs  error.rs  events.rs  file_handler.rs  file_monitor.rs  main.rs  markdown_generator.rs  ui_tree_handler.rs
