[package]
name = "context_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
eframe = { version = "0.27", features = ["default_fonts", "glow", "wgpu", "x11"] }
egui = "0.27"

# Emoji rendering
egui-twemoji = "0.1.0"
egui_extras = { version = "0.27", features = ["svg"] }

# File System Operations
notify = "6.1"
ignore = "0.4"
tempfile = "3.8"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# File Dialogs
rfd = "0.14"

# Utilities for unique IDs (fallback if egui::Id is insufficient)
uuid = { version = "1.6", features = ["v4"] }
